--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/fontawesome-free": "^5.15.4",
     "bootstrap": "^5.1.1",
     "bootswatch": "^5.1.1",
-    "electron": "^15.0.0"
+    "electron": "^15.0.0",
+    "electron-store": "^8.0.1"
   }
 }
