--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "pack": "electron-builder --dir",
     "dist": "electron-builder",
+    "build": "electron-packager . --overwrite --asar --platform=win32 --arch=x64 --prune=true --out=release-builds",
     "postinstall": "electron-builder install-app-deps"
   },
   "keywords": [],
@@ -20,10 +21,10 @@
     "electron-store": "^8.0.1"
   },
   "devDependencies": {
+    "electron": "^15.0.0",
     "electron-builder": "^22.11.7",
-    "electron": "^15.0.0"
+    "electron-packager": "^15.4.0"
   },
-  "version": "1.0.0",
   "build": {
     "appId": "elfindel69.balance-manager",
     "mac": {
