--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "pack": "electron-builder --dir",
     "dist": "electron-builder",
-    "build": "electron-packager . --overwrite --asar --platform=win32 --arch=x64 --prune=true --out=release-builds",
+    "build": "electron-packager . --overwrite --asar --prune=true --out=release-builds",
     "postinstall": "electron-builder install-app-deps"
   },
   "keywords": [],
